creations.css
/*CSS CREATED BY SAMMY ROBENS-PARADISE
    CURRENT AS OF: 2018-06-29
*/
html,body
{
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
}
.lead,
.navbar-brand {
    color: #333 !important;
}
a{

}

.landing-image{
    background-image: url("src/assets/website-coverimage2.png");
    height: 30rem;
    background-size: cover;
    width: auto;
    background-repeat: no-repeat;
    margin-left: -4rem;
    margin-right: -4rem;
    z-index: 22;
     
}
.landing-text{
    position: absolute;
    top: 5rem;
    background: -webkit-linear-gradient(#333, rgb(192, 190, 190));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    margin-right: 1rem;
    padding: 2rem;
}
@media screen and (max-width: 380px){
    .landing-text{
        top: 0rem;
    }
}
.landing-text-sub{
    position: absolute;
    top: 10rem;
    background: -webkit-linear-gradient(rgb(192, 190, 190),rgb(212, 210, 210) );
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}
.nav-link {
}

.nav-link:hover {
    color: #32228a;
    cursor: pointer;
}

.navbar.navbar-default {
    background-color: #ffffff;
    opacity: 0.7;
    box-shadow: 0px 0.3px #ffff;
}
.navbar-toggler{
    background-color: grey !important;
}
.center {
    text-align: center;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
}
.section-link-out{
   margin-top: -1rem;
    background-color: #0d0d0d;
}
.container{
    background-color: #0d0d0d;
}
.card-body{
    background-color: #f4f8fc;
}
.card{
    background-color: #f4f8fc;
    margin-bottom: 2rem;
}
.Images{
background-color: #0d0d0d;
}
.ul {
    list-style-type: disc;
}

.projects-section-title {
    background-color: #adadad;
    padding: 0;
    height: auto;
    color: #ffff;
    color: white;
    -webkit-transition: background-color 1s;
    /* For Safari 3.1 to 6.0 */
    transition: background-color 1s;
    box-shadow: 0px 5px #ffff;
}

.projects-section-title:hover {
    background-color: #404040;
}

h3 {
    color: #ffff !important;
    color: white;
}
.bottom-padding{
    height: 3rem;
    background-color: #0d0d0d;
    margin-top: -0.5rem;
}
footer{
    background-color: #0d0d0d;
    padding-bottom: -5rem;
}
@media screen and (max-width: 870px){
    .landing-text-sub{
        top: 18rem;
    }
  }
  @media screen and (max-width: 580px){
    .landing-text-sub{
        display: none;
    }
  }
  /* Safari */
  @-webkit-keyframes spin {
    0% { -webkit-transform: rotate(0deg); }
    100% { -webkit-transform: rotate(360deg); }
  }
  
  @keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
  }

